@@ -1,4 +1,8 @@
-2015-??-??
+2016-11-24
+
+  * Update copyright year
+
+2015-10-24
 
   * Define alternative MPI version 3.0 features (ZMPI_Count, ZMPI_Status, ...) even if MPI version 3.0 is used (to allow a seamless switch from non-3.0 to 3.0)
   * Allow MPI_STATUS_IGNORE to be used if the number of received data elements is not requested (if MPI version 3.0 is used, otherwise use ZMPI_STATUS_IGNORE)
